[gd_scene load_steps=2 format=3 uid="uid://kaw2cbgoh2jm"]

[ext_resource type="Script" path="res://Script/Compositions/spawn_worm.gd" id="1_82q7x"]

[node name="Spawn worm" type="Node2D"]
script = ExtResource("1_82q7x")

[node name="Timer" type="Timer" parent="."]

[node name="RandomTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RandomTimer" to="." method="_on_random_timer_timeout"]
